# django-shopify

./: Pipfile  Procfile  _nop_trigger.py  pyproject.toml
home/: cnr_urls.py  context_processors.py  models.py  urls.py  views.py
home/cnr/: __init__.py  graphql_common.py  recharge.py
home/esc/: __init__.py  graphql_common.py  notifier.py  views.py  webhooks.py
home/project/: __init.py__  webhooks.py
home/static/: esc.js  style.css
home/static/js/: cnr.js  discounts.js  transforms.js  webhooks.js
home/static/stylesheets/: application.css
home/templates/: base.html  nav.html
home/templates/home/: discounts.html  discounts_list.html  editor.html  import.html  index.html  test.html  transforms.html  transforms_list.html  webhooks.html  webhooks_list.html  wholesale_prices.html
shopify-extensions/: package.json  shopify.app.toml
shopify_app/: decorators.py  middleware.py  views.py
shopify_app/templates/shopify_app/: login.html
shopify_django_app/: settings.py
staticfiles/: flow-editor.js  import_export.js  nutrition_tables.js  products_list.js  wholesale_discounts.js
staticfiles/stylesheets/: application.css  importer.css  nurtrition_table_editor.css  preview-table.css
